--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "@shopify/flash-list": "^1.3.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
-    "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
